#3, button of resetting prophecy (without video yet), lot of fixes.